[package]
name = "dap-reactor"
version = "0.1.0"
authors = ["Victor Lopez <victor@codx.io>"]
categories = ["development-tools::debugging"]
edition = "2021"
keywords = ["dap"]
license = "MIT/Apache-2.0"
repository = "https://github.com/codx-dev/dap-reactor"
description = "A debug adapter protocol Rust provider."

[dependencies]
async-trait = { version = "0.1", optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["reactor", "serde_json/default"]
reactor = ["async-trait"]
