[package]
name = "dap-reactor"
version = "0.5.0"
authors = ["Codex Dev <contact@codx.io>"]
categories = ["development-tools::debugging"]
edition = "2021"
keywords = ["dap"]
license = "MIT/Apache-2.0"
repository = "https://github.com/codx-dev/dap-reactor"
description = "A debug adapter protocol Rust provider."

[dependencies]
async-trait = { version = "0.1", optional = true }
bytes = { version = "1.2", optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.21", optional = true, features = ["io-util", "net", "rt", "sync"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.21", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["reactor", "serde_json/default"]
reactor = ["async-trait", "bytes", "tracing", "tokio"]

[[example]]
name = "async"
required-features = ["reactor"]
